--- a/packages/rest-explorer/templates/index.html.ejs
+++ b/packages/rest-explorer/templates/index.html.ejs
@@ -5,9 +5,9 @@
 <head>
   <meta charset="UTF-8">
   <title>LoopBack API Explorer</title>
-  <link rel="stylesheet" type="text/css" href="./swagger-ui.css">
-  <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+  <link rel="stylesheet" type="text/css" href="<%- explorerPath %>/swagger-ui.css">
+  <link rel="icon" type="image/png" href="<%- explorerPath %>/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="<%- explorerPath %>/favicon-16x16.png" sizes="16x16" />
   <style>
     html {
       box-sizing: border-box;
@@ -31,8 +31,8 @@
 <body>
   <div id="swagger-ui"></div>
 
-  <script src="./swagger-ui-bundle.js"> </script>
-  <script src="./swagger-ui-standalone-preset.js"> </script>
+  <script src="<%- explorerPath %>/swagger-ui-bundle.js"> </script>
+  <script src="<%- explorerPath %>/swagger-ui-standalone-preset.js"> </script>
   <script>
     window.onload = function () {
 
